kubernetes/e-commerce-eureka-server.yml
apiVersion: v1
kind: Service
metadata:
  name: e-commerce-eureka-server
spec:
  selector:
    app: e-commerce-eureka-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commerce-eureka-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e-commerce-eureka-server
  template:
    metadata:
      labels:
        app: e-commerce-eureka-server
    spec:
      containers:
        - name: e-commerce-eureka-server
          image: hyejan/eureka-server:latest
          readinessProbe:
            httpGet:
              path: /health_check
              port: 8761
          livenessProbe:
            httpGet:
              path: /health_check
              port: 8761
            initialDelaySeconds: 7
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
