kubernetes/e-commerce-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: e-commerce-gateway-service
spec:
  selector:
    app: e-commerce-gateway-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commerce-gateway-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e-commerce-gateway-service
  template:
    metadata:
      labels:
        app: e-commerce-gateway-service
    spec:
      containers:
        - name: e-commerce-gateway-service
          image: hyejan/gateway-service:latest
          ports:
            - containerPort: 8000
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
